2012-07-25  Ken Brown  <kbrow1i@gmail.com>

	* seek.c (CopyFile): No special file mode handling for Cygwin.

2012-03-20  Karl Berry  <karl@tug.org>

	* *.c, *.h, *.man: update license of UMD files to use the X11
	license.  Approved by UMD legal, after discussion

2011-09-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* seetexk.test: New shell script for tests.
	* tests/{play.dvi,play*.2}: Test input and expected output.
	* Makefile.am: Add the test and its data.

2011-09-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dviselect.c (main): Allow filenames to start with '../'.
	* dvitodvi.c: Bug fix: make sure to finish the last page.
	* dvitodvi.man: Fix a formatting problem.

2011-08-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Remove unused files (they can still be found under
	<http://ctan.org/tex-archive/dviware/dvibook/libtex>).
	* bcopy.c, bzero.c, conv.[ch], convstruct.h, dvi_draw.c,
	dvistate.[ch], dvistuff.[ch], findpost.c, font.c, font_subr.c,
	getopt.c, gfclass.[ch], gfcodes.h, gffont.c, magfactor.c, num.h,
	pkfont.c, postamble.h, pxlfont.c, rotate.c, rstfont.c,
	scaletfm.c, scanpost.c, sdecode.[ch], skip.c, split.c, strsave.c,
	strtol.c, tfm.[ch], tfmfont.c: All removed.
	* Makefile.am [EXTRA_DIST]: Removed.

2010-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dviconcat.c, dviselect.c: Fix typo (RBIN_MODE => WBIN_MODE).
	* dvibook.c, dvitodvi.c: Ditto; append "b" to BIN_MODEs.

2010-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvibook.c, dviconcat.c, dviselect.c, dvitodvi.c [SET_BINARY]:
	Add casts to void.  (SET_BINARY): Remove casts to void.

2010-02-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* types.h: Don't #include <win32lib.h> for KPATHSEA.

2010-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* types.h: Do not #include <win32lib.h> for MinGW32.  Moved
	#undef DT_RIGHT and #define EndPage after kpathsea includes.

2009-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.